Address review comments
Co-authored-by: Peter Zaoral <pepo48@gmail.com>
Signed-off-by: Martin Bartoš <mabartos@redhat.com>